--- a/Sharp_lab03_stavrovskyi/Views/LoginWindow.xaml
+++ b/Sharp_lab03_stavrovskyi/Views/LoginWindow.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="400">
+             d:DesignHeight="530" d:DesignWidth="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -21,6 +21,7 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -44,5 +45,6 @@
         <TextBlock Grid.Row="11" Grid.Column="1" HorizontalAlignment="Center" Text="{Binding AgeString, Mode=OneWay}"/>
         <TextBlock Grid.Row="12" Grid.Column="1" HorizontalAlignment="Center" Text="{Binding CZodiacString, Mode=OneWay}"/>
         <TextBlock Grid.Row="13" Grid.Column="1" HorizontalAlignment="Center" Text="{Binding WZodiacString, Mode=OneWay}"/>
+        <Button Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" Foreground="White" Background="Black"  HorizontalAlignment="Center" Width="150" Content="Data" Command ="{Binding SwitchToDataCommand}"/>
     </Grid>
 </UserControl>
